[gd_scene load_steps=4 format=3 uid="uid://m0h11i3p4wpb"]

[ext_resource type="Script" path="res://panel/portrait.gd" id="1_a5gi4"]
[ext_resource type="Texture2D" uid="uid://dxph3ey2pdt6d" path="res://icon.svg" id="2_untdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vpmn"]
size = Vector2(124, 124)

[node name="Portrait" type="Node2D"]
script = ExtResource("1_a5gi4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_untdn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_7vpmn")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
